# AI_banter

./: .env.sample  AGENTS.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  flow_generator.py  main.py  orchestrator.py  persona_manager.py  types.py
tests/: __init__.py  test_config.py  test_flow_generator.py  test_main.py  test_orchestrator.py  test_persona_manager.py  test_types.py
